--- a/style.css
+++ b/style.css
@@ -32,3 +32,65 @@ ul li {list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+body{
+background: #1e5799; /* Old browsers */
+background: -moz-radial-gradient(center, ellipse cover,  #1e5799 0%, #bb5ef9 52%, #80f2e3 100%);
+background: -webkit-radial-gradient(center, ellipse cover,  #1e5799 0%,#bb5ef9 52%,#80f2e3 100%);
+background: radial-gradient(ellipse at center,  #1e5799 0%,#bb5ef9 52%,#80f2e3 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#80f2e3',GradientType=1 );
+font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+font-style: 14px;
+}
+.content {
+    background: #fff;
+    border-radius: 30px;
+    width: 500px;
+    height: 400px;
+    margin: 150px auto;
+}
+.content-title{
+    font-size: 20px;
+    text-transform:uppercase;
+    letter-spacing: 4px;
+    color: #122738;
+    text-shadow: 0px 2px 2px turquoise;
+    text-align: center;
+    padding: 25px 0 10px 0;
+}
+.content-subtitle {
+    text-align: center;
+    text-transform: lowercase;
+    font-family: 'Glory', sans-serif;
+    font-weight: 700;
+    color: #254844;
+    letter-spacing: 2px;
+    
+}
+.content-labas {
+    border: 5px solid #a75ded;
+    margin: 25px;
+    border-radius: 30px;
+    height: 280px;
+}
+.content-labas-list {
+    margin: 25px 0 0 0;
+}
+.content-labas-list li {
+    margin: 0 0 0 30px;
+    padding: 0 0 0 50px;
+    height: 50px;
+    color: #a5e5e0;
+}
+.content-labas-list li:nth-child(1) {
+    background: url(/images/check-icon.png) no-repeat;
+}
+.content-labas-list li:nth-child(1) a{
+    color: #80B7B3;
+    font-weight: bold;
+}
+.content-labas-list li:nth-child(1):hover {
+    background: url(/images/check-icon-turquoise.png) no-repeat;
+}
+.content-labas-list li:nth-child(1):hover a {
+    color: turquoise;
+}
