--- a/lab1-style.css
+++ b/lab1-style.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Izax';
+    src: url('fonts/Izax.eot');
+    src: local('☺'), url('fonts/Izax.woff') format('woff'), url('fonts/Izax.ttf') format('truetype'), url('fonts/Izax.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}  
+@font-face {
+	font-family: 'Izax_Thin';
+	src: url('fonts/Izax_Thin.eot');
+	src: local('☺'), url('fonts/Izax_Thin.woff') format('woff'), url('fonts/Izax_Thin.ttf') format('truetype'), url('fonts/Izax_Thin.svg') format('svg');
+	font-weight: 100;
+	font-style: normal;
+}
 /*Zeroing styles*/
 *{
     padding: 0;
@@ -34,78 +48,143 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* BASICS */
 *{
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 14px;
+    font-family: 'Playfair Display';
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 20px;
 }
-
-/* BORDERS */
-.top, .bottom, .center-central {border: 1px solid black;}
-.center-left {border-bottom: 1px solid black;}
-.center-top, .center-bottom {border-right: 1px solid black; border-left: 1px solid black;}
 
 /* SAME COLORS */
-.top, .bottom {
-    display: flex;
-    background: rgb(203	216	240);
-    height: 25%;
-}
-.center-top, .center-bottom {
-    background: rgb(235	241	221	);
-}
-.center-left, .center-right {
-    background: rgb(247	233	217);   
-}
+header, footer {background: rgb(36, 152, 160);}
+.center__top, .center__bottom, body {background: rgb(152, 211, 226);}
+nav, .center__right {background: rgb(255, 240, 211);}
+.center__main, .top-title, .bottom-title {background: rgb(243, 243, 243);}
 
-/*SPANS*/
-.right-top-span, .right-bottom-span {
+/*TITLES*/
+.top-title, .bottom-title {
     display: flex;
     align-self: center;
     position: absolute;
     right: 20px;
-    width: 25%;
+    width: 200px;
     height: 50px;
-    background: #fff;
-    border: 1px solid black;
+    border: 5px solid rgb(25, 124, 131);
+    border-radius: 15px;
+    box-shadow: -8px 0 8px rgb(8, 67, 71);
 }
-.span-bottom, .span-top {
+.top-title h1, .bottom-title h2 {
     width: 100%;
     align-self: center;
+    font-size: 30px;
 }
-.span-top {
+.top-title h1 {
     text-align: center;
+    letter-spacing: 8px;
 }
-.span-bottom {
+.bottom-title h2 {
     text-align: right;
     padding-right: 15px;
 }
 
+header, footer {
+    display: flex;
+    height: 25%;
+}
+header q {
+    font-style: italic;
+    font-family: "Times New Roman", Times, Baskerville, Georgia, serif;
+    color: rgb(152, 211, 226);
+    quotes: '\00AB' '\00BB' '\201E' '\201C';
+    width: px;
+    font-weight: 100;
+    text-align: center;
+    display: flex;
+    align-self: center;
+    white-space: pre;
+    padding: 0 0 0 25px;
+}
 /* CENTER */
 .center {
     height: 50%;
+    min-width: 850px;
     display: flex;
 }
-.center-main_blocks {
+.center__main-blocks {
     width: 75%;
 }
-.center-main_blocks-top_part {
+.main-blocks__top-part {
     display: flex;
     height: 80%;
 }
-.center-left {
-    width: 40%;
+.center__central-blocks {
+    width: 70%;
 }
-.center-central_blocks {
-    width: 60%;
-}
-.center-top {
-    height: 20%;
-}
-.center-central {
+
+/* Center__Main */
+.center__main {
     height: 80%;
+    min-height: 210px;
+    padding: 30px 30px;
+    position: relative;
+    border: 3px solid rgb(241, 48, 80);
+    border-radius: 15px;
 }
-.center-bottom {
+.center__main p::first-letter {
+    padding-left: 15px;
+    font-size: 30px;
+}
+.center__main span {
+    color: rgb(241, 48, 80);
+}
+.center__main a {
+    display: block;
+    width: 100%;
+    position: absolute;
+    bottom: 30px;
+    margin: 0 0 0 -30px;
+    text-align: center;
+    color: rgb(25, 124, 131);
+    text-decoration: underline;
+    text-transform: lowercase;
+    font-style: italic;
+}
+.center__main a:hover {
+    color: lightseagreen;
+}
+
+/* Center sides */
+.center__top {
     height: 20%;
 }
-.center-right {
+.center__bottom {
+    height: 20%;
+}
+.center__right {
     width: 25%;
+    min-width: 200px;
+    background: url(/images/girl.jpeg) 40% 50% no-repeat;
+}
+nav {
+    width: 30%;
+    min-width: 150px;
+    padding: 40px 0 30px 15px;
+}
+nav li {
+    padding: 0 0 0 15px;
+    margin: 0 0 30px 0;
+}
+nav li::before {
+    content: '';
+    border-radius: 50%;
+    background-color: rgb(241, 48, 80);
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    margin: 0 10px 0 0;
+}
+nav li:nth-child(1) {
+    color: rgb(190, 116, 128);
+}
+nav li:nth-child(1)::before {
+    background-color: rgb(190, 116, 128);
 }
