--- a/lab1.3.css
+++ b/lab1.3.css
@@ -15,7 +15,7 @@
 
 /* BASICS */
 *{
-    font-family: 'Playfair Display';
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: 500;
     line-height: 20px;
@@ -23,15 +23,15 @@
 body{
     width: 100vw;
     height: 100vh;
-    min-width: 850px;
+    min-width: 700px;
     min-height: 700px;
 }
 
 /* SAME COLORS */
-header, footer {background: rgb(36, 152, 160);}
-.center__top, .center__bottom, body {background: rgb(152, 211, 226);}
-nav, .center__right {background: rgb(255, 240, 211);}
-.center__main, .top-title, .bottom-title {background: rgb(243, 243, 243);}
+header, footer {background: rgb(68, 68, 68);}
+.center__top, .center__bottom, body {background: black;}
+nav, .center__right {background: rgb(255, 255, 255);}
+.center__main, .top-title, .bottom-title {background: rgb(201, 201, 201);}
 
 /*TITLES*/
 .top-title, .bottom-title {
@@ -41,28 +41,39 @@ nav, .center__right {background: rgb(255, 240, 211);}
     right: 20px;
     width: 200px;
     height: 50px;
-    border: 5px solid rgb(25, 124, 131);
-    border-radius: 15px;
-    box-shadow: -8px 0 8px rgb(8, 67, 71);
 }
 .top-title h1, .bottom-title h2 {
+    text-transform: uppercase;
     width: 100%;
     align-self: center;
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: 700;
 }
 .top-title h1 {
     text-align: center;
-    letter-spacing: 8px;
+    letter-spacing: 15px;
 }
 .bottom-title h2 {
     text-align: right;
     padding-right: 15px;
+}
+.top-title, .bottom-title, .center__main {
+    border: 5px solid rgb(255, 255, 255);
+    border-radius: 15px;
+    box-shadow: 0px 0 8px rgb(255, 255, 255);
+}
+.top-title:hover, .bottom-title:hover, .center__main:hover {
+    box-shadow: 0px 0 20px rgb(255, 255, 255);
 }
 
 /* HEADER_FOOTER */
 header, footer {
     display: flex;
     height: 25%;
+}
+header {
+    background: url(./images/b&w_forest.jpg) 0 -120px/100% auto no-repeat fixed;
+    object-fit: contain;
 }
 header div {
     display: flex;
@@ -71,22 +82,16 @@ header div {
     width: 70%;
     justify-content: center;
 }
-header div q {
-    font-style: italic;
-    
-    quotes: '\00AB' '\00BB' '\201E' '\201C';
-    text-align: center;
-}
-header q, footer p {
-    color: rgb(152, 211, 226);
+footer p {
+    color: rgb(255, 255, 255);
+    opacity: 0.2;
+    text-align: justify;
+    font-size: 14px;
+    overflow: hidden;
 }
 footer div {
     display: flex;
     width: 70%;
-}
-footer div p {
-    margin: 20px;
-    overflow: hidden;
 }
 
 /* CENTER */
@@ -108,32 +113,22 @@ footer div p {
 /* Center__Main */
 .center__main {
     height: 80%;
-    padding: 30px 30px;
+    margin: 0 15px;
+    padding: 20px;
     position: relative;
-    border: 3px solid rgb(241, 48, 80);
-    border-radius: 15px;
 }
-.center__main p::first-letter {
-    padding-left: 15px;
-    font-size: 30px;
-}
-.center__main span {
-    color: rgb(241, 48, 80);
-}
-.center__main a {
-    display: block;
-    width: 100%;
-    position: absolute;
-    bottom: 30px;
-    margin: 0 0 0 -30px;
+.center__main p {
+    font-size: 20px;
+    line-height: 30px;
     text-align: center;
-    color: rgb(25, 124, 131);
-    text-decoration: underline;
-    text-transform: lowercase;
-    font-style: italic;
 }
-.center__main a:hover {
-    color: lightseagreen;
+.center__main:hover {
+   
+    background: #ff9932; /* Old browsers */
+    background: -moz-linear-gradient(top,  #ff9932 0%, #30ff3e 50%, #89c8ff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #ff9932 0%,#30ff3e 50%,#89c8ff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #ff9932 0%,#30ff3e 50%,#89c8ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff9932', endColorstr='#89c8ff',GradientType=0 ); /* IE6-9 */
 }
 
 /* Center sides */
@@ -145,14 +140,44 @@ footer div p {
 .center__top p, .center__bottom p{
     display: flex;
     align-self: center;
-    text-transform: uppercase;
-    font-size: 40px;
-    color: rgb(25, 124, 131);
+    text-transform: capitalize;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
     opacity: 0.5;
 }
 .center__right {
     width: 25%;
+    border-radius: 20px;
+    margin: 0 0 30px 0;
 }
+.center__right a {
+    color: red;
+    display: block;
+    padding: 30px 0 0 0;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+}
+.center__right h2:hover {
+    text-decoration: underline;
+}
+.center__right ul {
+    margin: 30px;
+    text-align: right;
+}
+.center__right li {
+    padding: 0 0 10px 0;
+    font-style: italic;
+} 
+.center__right li:nth-child(2) {padding-right: 10%;}
+.center__right li:nth-child(3) {padding-right: 20%;}
+.center__right li:nth-child(4) {padding-right: 30%;}
+.center__right li:nth-child(5) {padding-right: 40%;}
+.center__right li:nth-child(6) {padding-right: 50%;}
+.center__right li:nth-child(7) {padding-right: 60%;}
+.center__right li:nth-child(8) {padding-right: 70%;}
+.center__right li:nth-child(9) {padding-right: 80%;}
+.center__right li:nth-child(10) {padding-right: 90%;}
 nav {
     display: flex;
     width: 30%;
@@ -166,10 +191,10 @@ nav ul {
 nav li {
     padding: 0 0 0 15px;
     height: 50px;
-    color: rgb(190, 116, 128);
+    color: rgb(168, 168, 168);
 }
 nav li a {
-    color: rgb(241, 48, 80);
+    color: rgb(0, 0, 0);
 }
 nav li a:hover {
     font-size: 20px;
@@ -177,13 +202,12 @@ nav li a:hover {
 nav li::before {
     content: '';
     border-radius: 50%;
-    background-color: rgb(241, 48, 80);
+    background-color: rgb(0, 0, 0);
     width: 10px;
     height: 10px;
     display: inline-block;
     margin: 0 10px 0 0;
-    box-shadow: 0 3px 2px rgb(121, 103, 72);
 }
-nav li:nth-child(2)::before {
-    background-color: rgb(190, 116, 128);
+nav li:nth-child(3)::before {
+    background-color: rgb(168, 168, 168);
 }
