--- a/lab1.3.css
+++ b/lab1.3.css
@@ -194,7 +194,7 @@ nav li {
     color: rgb(168, 168, 168);
 }
 nav li a {
-    color: rgb(0, 0, 0);
+    color: rgb(241, 48, 80);
 }
 nav li a:hover {
     font-size: 20px;
@@ -202,11 +202,12 @@ nav li a:hover {
 nav li::before {
     content: '';
     border-radius: 50%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(241, 48, 80);
     width: 10px;
     height: 10px;
     display: inline-block;
     margin: 0 10px 0 0;
+    box-shadow: 0 3px 2px rgb(121, 103, 72);
 }
 nav li:nth-child(3)::before {
     background-color: rgb(168, 168, 168);
