--- a/lab1.1.css
+++ b/lab1.1.css
@@ -5,14 +5,6 @@
     font-weight: 500;
     line-height: 20px;
 }
-body{
-    width: 100vw;
-    height: 100vh;
-    min-width: 400px;
-    min-height: 400px;
-    display: flex;
-    flex-direction: column;
-}
 
 /* SAME COLORS */
 header, footer {background: rgb(36, 152, 160);}
@@ -21,12 +13,6 @@ nav, .center__right {background: rgb(255, 240, 211);}
 .center__main, .top-title, .bottom-title {background: rgb(243, 243, 243);}
 
 /* HEADER_FOOTER */
-header, footer {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: space-between;
-}
 header div, footer div {    
     display: flex;
     align-items: center;
@@ -43,48 +29,18 @@ header q, footer p {
 
 /*TITLES*/
 .top-title, .bottom-title {
-    margin-right: 20px;
-    width: 200px;
     border: 5px solid rgb(25, 124, 131);
     border-radius: 15px;
     box-shadow: -8px 0 8px rgb(8, 67, 71);
+    padding: 5px;
 }
 .top-title h1, .bottom-title h2 {
-    width: 100%;
     font-size: 30px;
     line-height: 30px;
-}
-.top-title h1 {
-    text-align: center;
-}
-.bottom-title h2 {
-    text-align: right;
-}
-
-/* CENTER */
-.center {
-    flex: 2;
-    display: flex;
-    font-display: row;
-}
-.center__main-blocks {
-    flex: 4;
-    display: flex;
-    flex-direction: column;
-}
-.main-blocks__top-part {
-    flex: 5;
-    display: flex;
-}
-.center__central-blocks {
-    flex: 4;
-    display: flex;
-    flex-direction: column;
 }
 
 /* Center__Main */
 .center__main {
-    flex: 5;
     padding: 30px 30px 60px 30px;
     position: relative;
     border: 3px solid rgb(241, 48, 80);
@@ -114,7 +70,6 @@ header q, footer p {
 
 /* Center sides */
 .center__top, .center__bottom {
-    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,18 +82,10 @@ header q, footer p {
     line-height: 40px;
 }
 .center__right {
-    flex: 1;
     background: #0E1A2A url(./images/girl.jpeg) 30% 50% no-repeat;
 }
 nav {
-    flex: 1;
-    display: flex;
-    align-items: center;
     border-radius: 20px;
-}
-nav ul {
-    display: flex;
-    flex-direction: column;
 }
 nav li {
     padding: 0 0 0 15px;
