--- a/lab1.2.css
+++ b/lab1.2.css
@@ -20,26 +20,23 @@ header {
     box-shadow: 0 5px 15px rgb(27, 44, 99);
     border-bottom: 3px solid rgb(38, 0, 126);
 }
-header div {
+header div > .top-title {
     margin: 0 0 0 30px;
+}
+.h2 {
+    width: 300px;
+}
+.h2, aside h2 {
+    border: 10px double rgb(38, 0, 126);
+    margin: 15px;
+    padding: 10px;
 }
 header h2, aside h2 {
     color: white;
     font-size: 40px;
     text-shadow: 0 5px 5px rgb(38, 0, 126);
-    border: 10px double rgb(38, 0, 126);
     text-align: center;
-    align-self: center;
     line-height: 40px;
-}
-header h2{
-    padding: 15px;
-    margin: 15px 0 15px 30px;
-    width: 150px;
-}
-aside h2 {
-    padding: 10px;
-    margin: 10px;
 }
 header p {
     color: white;
