--- a/blocks-composing.css
+++ b/blocks-composing.css
@@ -14,7 +14,7 @@ header, footer {
 }
 
 .top-title, .bottom-title {
-    margin-right: 20px;
+    margin: 20px;
     width: 200px;
 }
 .top-title h1, .bottom-title h2 {
