--- a/lab1.4.css
+++ b/lab1.4.css
@@ -2,13 +2,6 @@
 *{
     font-weight: 500;
 }
-body{
-    width: 100vw;
-    height: 100vh;
-    min-width: 800px;
-    min-height: 700px;
-}
-
 /* SAME COLORS */
 header, footer {background: #c3dbf3;}
 .center__top, .center__bottom, body {background: rgb(255, 255, 255);}
@@ -19,76 +12,61 @@ nav, .center__right {background: #fde9d9;}
 .center__bottom, .center__top {border-right: 1px solid black;}
 nav {border-bottom: 1px solid black;}
 
+/* HEADER_FOOTER */
+header, footer {
+    align-items: unset;
+    position: relative;
+    padding: 15px;
+}
+header p, footer p {
+    flex: 4;
+    text-align: justify;
+    line-height: 20px;
+}
+
 /*TITLES*/
 .top-title, .bottom-title {
-    position: absolute;
-    right: 10px;
-    top: 40%;
-    width: 200px;
-    height: 50px;
     display: flex;
+    align-items: center;
     font-size: 20px;
+    align-self: center;
+}
+.top-title h1, .bottom-title h2 {
+    line-height: 30px;
 }
 .top-title h1 {
     text-align: center;
     width: 100%;
-    align-self: center;
 }
 .bottom-title h2 {
     text-align: right;
     width: 100%;
     padding-right: 15px;
-    align-self: center;
-}
-
-/* HEADER_FOOTER */
-header, footer {
-    height: 25%;
-    position: relative;
-    display: flex;
-    padding: 15px;
-}
-header p, footer p {
-    width: 70%;
-    text-align: justify;
-}
-/* CENTER */
-.center {
-    height: 50%;
-    display: flex;
-}
-.center__main-blocks {
-    width: 75%;
-}
-.main-blocks__top-part {
-    display: flex;
-    height: 80%;
-}
-.center__central-blocks {
-    width: 70%;
 }
 
 /* Center__Main */
 .center__main {
-    height: 80%;
     overflow: auto;
     padding: 15px;
 }
 .center__main p {
-    font-size: px;
+    font-size: 20px;
     line-height: 25px;
     text-align: center;
 }
 
 /* Center sides */
 .center__top, .center__bottom {
-    height: 20%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    padding: 5px;
+}
+.center__top p, .center__bottom p {
+    text-align: center;
+    line-height: 20px;
+    width: 100%;
 }
 .center__right {
-    width: 25%;
     padding: 20px;
 }
 .center__right p {
@@ -99,13 +77,10 @@ header p, footer p {
     font-size: 25px;
 }
 nav {
-    display: flex;
-    width: 30%;
-    align-items: center;
+    padding: 15px;
 }
 nav li {
-    padding: 0 0 0 15px;
-    height: 50px;
+    line-height: 50px;
     color: #9acdff;
 }
 nav li a {
